Fixed model cards lists on iOS.

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.cards.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.cards.less
@@ -4,7 +4,8 @@
 
 .dem-card-list {
 	display: flex;
-	flex-flow: row wrap;
+	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: flex-start;
 	
