--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
@@ -93,7 +93,6 @@
 /* Override to flush the footer */
 main.mdl-layout__content {
 	display: flex;
-	flex-flow: column nowrap;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	
